no link alignment fix

--- a/app/assets/stylesheets/autocompletesearch.css
+++ b/app/assets/stylesheets/autocompletesearch.css
@@ -85,6 +85,7 @@
 #apt-search-results .ui-autocomplete {
   top: 96px !important;
 }
+#apt-search-results{position: relative;}
 
 ul.ui-autocomplete li.building_link_li{
   background-color: #eee;
